tests/NormalTests/paczka1/fuzzy1/52066264.err
Error in line 5: x8M91hAPD S152 44,9
Error in line 2: S785 S785 42,1
Error in line 21: 9IiT S785 65,0
Error in line 29: hl4pkJK7uxi S152 33,6
Error in line 32: hl4pkJK7uxi A328 50,1
